<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/transmitter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/transmitter_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/transmitter_swipe_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/transmitter_label"
        android:text="@string/transmitter_swipe_tip"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
   <EditText
        android:id="@+id/transmitter_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transmitter_message_label"
        android:layout_below="@+id/transmitter_message_label"
        android:inputType="textMultiLine" />
        
    <Button
        android:id="@+id/transmitter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transmitter_message"
        android:layout_below="@+id/transmitter_message"
        android:text="@string/transmitter_start_label" >

        <requestFocus />
    </Button>
    
   <ProgressBar
        android:id="@+id/transmitter_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />
    
    <TextView
        android:id="@+id/transmitter_progress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/transmitter_progress_bar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/transmitter_message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transmitter_swipe_tip"
        android:layout_below="@+id/transmitter_swipe_tip"
        android:layout_marginTop="15dp"
        android:text="@string/transmitter_message_label" />

</RelativeLayout>
